--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_media_player">MediaPlayerActivity</string>
     <string name="title_activity_gps">GPSActivity</string>
+    <string name="cancel">Cancelar</string>
+    <string name="fire">Ok</string>
 
 </resources>
